# WhatsUpCrypto

./: Cargo.toml  LICENCE  README.md
src/: main.rs
src/assets/: index.js  styles.css
src/handlers/: news_handler.rs
src/middleware/: rate_limit.rs
src/models/: coindesk_adapter.rs  mod.rs  news.rs
src/routes/: home_route.rs  mod.rs  news_route.rs
src/services/: news_service.rs
src/utils/: utils.rs
src/views/: index.html
