[package]
name = "crypto_news"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.5.0"
chrono = "0.4"
tower-http = { version = "=0.6.2", features = ["fs", "trace"] }
